<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TvShow</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="ic_logo">Logo</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="best_vote">Best Vote</string>
    <string name="worst_vote">Worst Vote</string>
    <string name="random">Random Vote</string>
    <string name="poster">Poster</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">TvShow</string>
    <string name="title">Title</string>
    <string name="text_rating">9.0</string>
    <string name="movie_text">Movie</string>
    <string name="tv_show_title">Tv Show</string>
    <string name="detail_poster">Detail Poster</string>
    <string name="detail">Detail</string>
    <string name="imagefontshadow">Image Shadow</string>
    <string name="detail_image">Detail Image</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="search_movie_hint">Search Movie</string>
    <string name="search_tv_show_hint">Search Tv Show</string>
    <string name="welcome">Welcome</string>
    <string name="register">Create new account</string>
    <string name="text_sign_up">Don\'t have an account?</string>
    <string name="text_sign_in">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_in">Please sign in to your account</string>
    <string name="please_fill_form">Please fill in the form to continue</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="default_web_client_ids">869053076559-q52mdi1fpqqf5qq6jm87pnvenm5a7l4d.apps.googleusercontent.com</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="email_verified">Your email is verified</string>
    <string name="email_unverified">Your email is unverified,</string>
    <string name="verified_email_here">verify in here</string>
    <string name="logout">Logout</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="update_password">Update Password</string>
    <string name="input_your_password">Please,input Your Password</string>
    <string name="input_new_password">Input new password</string>
    <string name="input_your_new_email_address">Input your new Email Address</string>
    <string name="new_email_address">New Email Address</string>
    <string name="update_email">Update Email</string>
    <string name="change_email">Change Email</string>
</resources>