<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="210dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <ImageView
        android:id="@+id/item_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/poster_alita" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@color/colorTint"
        android:gravity="center"
        android:lines="2"
        android:text="@string/title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorTint"
        android:gravity="center"
        android:text="@string/text_rating"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_star" />
</com.google.android.material.card.MaterialCardView>